--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "gulpfile.js",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "dev": "gulp",
+    "prod": "gulp --production"
+  },
   "keywords": [
     "wordpress",
     "theme"
